# VC

./: .gitignore  DEVELOPMENT_CHECKLIST_V2.md  EPICS_SUMMARY_MATRIX.md  HANDOFF_API_REFERENCE.md  HANDOFF_CLIENT.md  HANDOFF_DATABASE_SCHEMA.md  HANDOFF_DEPLOYMENT.md  HANDOFF_README.md  HANDOFF_SETUP_GUIDE.md  HANDOFF_TECHNICAL.md  HANDOFF_TESTING.md  START_HERE.md  SYSTEM_ARCHITECTURE_DIAGRAM.mmd  api_design.md  architecture.md  best_practices.md  connect.md  cursor_rules.md  deploy.sh  development_plan.md  docker-compose.prod.yml  docker-compose.yml  epics.md  epics_v2_enhanced_requirements.md  find-flutter.ps1  generate-screenshots.ps1  generate-screenshots.sh  install-flutter.ps1  launch-app-fixed.ps1  launch-app.bat  launch-app.sh  launch-frontend.ps1  launch-full-app.bat  launch-full-app.sh  nginx.conf  prometheus.yml  start-backend.ps1  start-both.ps1  start-dev.sh
backend/: Dockerfile  Dockerfile.prod  README.md  activate_all_meetings.py  alembic.ini  check_meetings.py  check_sessions.py  create_admin_user.py  create_aya_demo_meeting.py  create_fake_meetings.py  deactivate_half_meetings.py  debug_token.py  env.example  fix_cors_and_admin.py  generate_test_data.py  increase_aya_meeting_radius.py  init.sql  make_aya_demo_testable.py  populate_user_data.py  pyproject.toml  run_real_tests.py  run_simple_tests.py  run_tests.py  test_admin_login.py  test_database.py  test_env.py  test_session_creation.py  test_token.py  test_user_flows.py  update_aya_meeting.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_migration.py  002_add_password_hash.py
backend/app/: __init__.py  main.py
backend/app/core/: auth.py  config.py  database.py  database_sqlite.py  database_test.py  exceptions.py  logging.py
backend/app/models/: __init__.py  base.py  base_test.py  contact.py  contact_test.py  meeting.py  session.py  session_event.py  uuid_mixin.py
backend/app/schemas/: auth.py  contact.py  meeting.py  offline.py  session.py
backend/app/services/: ai_service.py  biometric_service.py  contact_service.py  (+11 more)
backend/tests/: conftest.py  test_api_integration.py  test_api_integration_real.py  test_core_auth.py  test_core_config.py  test_core_database.py  test_core_exceptions.py  test_integration_e2e.py  test_models.py  test_models_contact.py  test_models_meeting.py  test_models_session.py  test_models_session_event.py  test_real_implementations.py  test_services_location_service.py  test_services_meeting_service.py  test_session_service.py
(+62 files in other folders)
